@@ -14,8 +14,7 @@ _TRIGGER=(
   archboot-riscv
   archlinux-keyring
   archlinuxarm-keyring
-  bash 
-  bcachefs-tools
+  bash
   btrfs-progs
   ca-certificates
   coreutils
