@@ -4,7 +4,7 @@
 
 _run ()
 {
-    _all_mods '/fs/(bcachefs|btrfs|exfat|ext4|fat|nfsd|nls|ntfs3|smb|vboxsf|xfs)'
+    _all_mods '/fs/(btrfs|exfat|ext4|fat|nfsd|nls|ntfs3|smb|vboxsf|xfs)'
     _all_mods -f 'drivers/crypto' '/crypto/'
     _map _mod crypto-crc32c crypto-crc32 configfs nls_cp437 nls_ascii
 }
