@@ -36,7 +36,6 @@ _grub_common_before() {
     _FAIL_COMPLEX=""
     _RAID_ON_LVM=""
     _common_bootloader_checks
-    _abort_bcachefs_bootpart || return 1
     if [[ ! -d "${_DESTDIR}/usr/lib/grub" ]]; then
         _PACKAGES=(grub)
         _run_pacman | _dialog --title " Logging to ${_VC} | ${_LOG} " --gauge "Installing package(s):\n${_PACKAGES[*]}..." 7 75 0
